--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
     <version>1.0.0</version>
     <name>wx4j</name>
     <description>A wechat api library through web wechat protocol.</description>
+    <url>https://github.com/perfectworks/wx4j</url>
 
     <licenses>
         <license>
